--- a/state_lattice_planner/package.xml
+++ b/state_lattice_planner/package.xml
@@ -54,16 +54,19 @@
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>cmake_modules</build_depend>
+  <build_depend>trajectory_generator</build_depend>
   <build_export_depend>geometry_msgs</build_export_depend>
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
   <build_export_depend>cmake_modules</build_export_depend>
+  <build_export_depend>trajecotry_generator</build_export_depend>
   <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>cmake_modules</exec_depend>
+  <exec_depend>trajectory_generator</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
