--- a/state_lattice_planner/CMakeLists.txt
+++ b/state_lattice_planner/CMakeLists.txt
@@ -130,18 +130,21 @@ include_directories(
 # add_library(${PROJECT_NAME}
 #   src/${PROJECT_NAME}/state_lattice_planner.cpp
 # )
+add_library(lookup_table_generator_lib
+  src/lookup_table_generator.cpp
+)
 
 ## Add cmake target dependencies of the library
 ## as an example, code may need to be generated before libraries
 ## either from message generation or dynamic reconfigure
-# add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(lookup_table_generator_lib ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
 # add_executable(${PROJECT_NAME}_node src/state_lattice_planner_node.cpp)
 add_executable(state_lattice_planner src/state_lattice_planner.cpp)
-add_executable(lookup_table_generator src/lookup_table_generator_node.cpp src/lookup_table_generator.cpp)
+add_executable(lookup_table_generator src/lookup_table_generator_node.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -159,6 +162,11 @@ add_dependencies(lookup_table_generator ${${PROJECT_NAME}_EXPORTED_TARGETS} ${ca
 # target_link_libraries(${PROJECT_NAME}_node
 #   ${catkin_LIBRARIES}
 # )
+target_link_libraries(lookup_table_generator_lib
+  ${catkin_LIBRARIES}
+  trajectory_generator_diff_drive
+  motion_model_diff_drive
+)
 target_link_libraries(state_lattice_planner
   ${catkin_LIBRARIES}
   trajectory_generator_diff_drive
@@ -168,6 +176,7 @@ target_link_libraries(lookup_table_generator
   ${catkin_LIBRARIES}
   trajectory_generator_diff_drive
   motion_model_diff_drive
+  lookup_table_generator_lib
 )
 
 #############
@@ -219,15 +228,15 @@ target_link_libraries(lookup_table_generator
 # catkin_add_nosetests(test)
 
 if(CATKIN_ENABLE_TESTING)
-	find_package(rostest REQUIRED)
-    add_rostest_gtest(state_lattice_planner_test 
-		test/state_lattice_planner.test
-		test/state_lattice_planner_test.cpp
-        src/lookup_table_generator.cpp
-	)
-	target_link_libraries(state_lattice_planner_test 
+    find_package(rostest REQUIRED)
+    add_rostest_gtest(state_lattice_planner_test
+        test/state_lattice_planner.test
+        test/state_lattice_planner_test.cpp
+    )
+    target_link_libraries(state_lattice_planner_test
         ${catkin_LIBRARIES}
         motion_model_diff_drive
         trajectory_generator_diff_drive
-    ) 
+        lookup_table_generator_lib
+    )
 endif()
