--- a/state_lattice_planner/CMakeLists.txt
+++ b/state_lattice_planner/CMakeLists.txt
@@ -41,9 +41,11 @@ add_dependencies(state_lattice_planner_lib ${${PROJECT_NAME}_EXPORTED_TARGETS} $
 
 add_executable(state_lattice_planner src/state_lattice_planner_node.cpp)
 add_executable(lookup_table_generator src/lookup_table_generator_node.cpp)
+add_executable(trajectory_viewer src/trajectory_viewer.cpp src/lookup_table_utils.cpp)
 
 add_dependencies(state_lattice_planner ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 add_dependencies(lookup_table_generator ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(trajectory_viewer ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 target_link_libraries(lookup_table_generator_lib
   ${catkin_LIBRARIES}
@@ -58,6 +60,9 @@ target_link_libraries(state_lattice_planner
 target_link_libraries(lookup_table_generator
   ${catkin_LIBRARIES}
   lookup_table_generator_lib
+)
+target_link_libraries(trajectory_viewer
+  ${catkin_LIBRARIES}
 )
 
 if(CATKIN_ENABLE_TESTING)
