combined trajectory_generator into state_lattice_planner

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,6 @@ find_package(catkin REQUIRED COMPONENTS
   std_msgs
   tf
   cmake_modules
-  trajectory_generator
 )
 
 find_package(Eigen3 REQUIRED COMPONENTS system)
@@ -23,7 +22,7 @@ endif()
 
 catkin_package(
    INCLUDE_DIRS include
-   LIBRARIES state_lattice_planner_lib lookup_table_generator_lib
+   LIBRARIES state_lattice_planner_lib lookup_table_generator_lib trajectory_generator_diff_drive motion_model_diff_drive
 #  CATKIN_DEPENDS geometry_msgs roscpp rospy std_msgs
 #  DEPENDS system_lib
 )
@@ -34,6 +33,12 @@ include_directories(
   ${EIGEN3_INCLUDE_DIRS}
 )
 
+add_library(motion_model_diff_drive
+  src/motion_model_diff_drive.cpp
+)
+add_library(trajectory_generator_diff_drive
+  src/trajectory_generator_diff_drive.cpp
+)
 add_library(lookup_table_generator_lib
   src/lookup_table_generator.cpp
   src/lookup_table_utils.cpp
@@ -45,6 +50,8 @@ add_library(state_lattice_planner_lib
 
 add_dependencies(lookup_table_generator_lib ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 add_dependencies(state_lattice_planner_lib ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(motion_model_diff_drive ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(trajectory_generator_diff_drive ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 add_executable(state_lattice_planner src/state_lattice_planner_node.cpp)
 add_executable(lookup_table_generator src/lookup_table_generator_node.cpp)
@@ -54,22 +61,22 @@ add_dependencies(state_lattice_planner ${${PROJECT_NAME}_EXPORTED_TARGETS} ${cat
 add_dependencies(lookup_table_generator ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 add_dependencies(trajectory_viewer ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
-target_link_libraries(lookup_table_generator_lib
-  ${catkin_LIBRARIES}
-)
-target_link_libraries(state_lattice_planner_lib
-  ${catkin_LIBRARIES}
-)
 target_link_libraries(state_lattice_planner
   ${catkin_LIBRARIES}
   state_lattice_planner_lib
+  trajectory_generator_diff_drive
+  motion_model_diff_drive
 )
 target_link_libraries(lookup_table_generator
   ${catkin_LIBRARIES}
   lookup_table_generator_lib
+  trajectory_generator_diff_drive
+  motion_model_diff_drive
 )
 target_link_libraries(trajectory_viewer
   ${catkin_LIBRARIES}
+  trajectory_generator_diff_drive
+  motion_model_diff_drive
 )
 
 if(CATKIN_ENABLE_TESTING)
@@ -82,5 +89,14 @@ if(CATKIN_ENABLE_TESTING)
         ${catkin_LIBRARIES}
         lookup_table_generator_lib
         state_lattice_planner_lib
+    )
+    add_rostest_gtest(trajectory_generator_test
+        test/trajectory_generator.test
+        test/trajectory_generator_test.cpp
+    )
+    target_link_libraries(trajectory_generator_test
+        ${catkin_LIBRARIES}
+        motion_model_diff_drive
+        trajectory_generator_diff_drive
     )
 endif()
