--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,24 +81,5 @@ target_link_libraries(trajectory_viewer
 
 if(CATKIN_ENABLE_TESTING)
     find_package(rostest REQUIRED)
-    add_rostest_gtest(trajectory_generator_test
-        test/trajectory_generator.test
-        test/trajectory_generator_test.cpp
-    )
-    target_link_libraries(trajectory_generator_test
-        ${catkin_LIBRARIES}
-        motion_model_diff_drive
-        trajectory_generator_diff_drive
-    )
-    add_rostest_gtest(state_lattice_planner_test
-        test/state_lattice_planner.test
-        test/state_lattice_planner_test.cpp
-    )
-    target_link_libraries(state_lattice_planner_test
-        ${catkin_LIBRARIES}
-        lookup_table_generator_lib
-        state_lattice_planner_lib
-        motion_model_diff_drive
-        trajectory_generator_diff_drive
-    )
+    add_subdirectory(test)
 endif()
