add navigation test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,9 @@ find_package(catkin REQUIRED COMPONENTS
   std_msgs
   tf
   cmake_modules
+  tf2
+  tf2_ros
+  tf2_geometry_msgs
 )
 
 find_package(Eigen3 REQUIRED COMPONENTS system)
