--- a/package.xml
+++ b/package.xml
@@ -64,7 +64,8 @@
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>cmake_modules</exec_depend>
-  <test_depend>rosunit</test_depend>
+  <test_depend>rostest</test_depend>
+  <test_depend>roslint</test_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
